# deseabel

./: .gitignore  .pre-commit-config.yaml  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  vercel.json
config/: environment_config.yaml
data/: dead_zone.geojson  dead_zone_10_noeuds.geojson  dead_zone_5_noeuds.geojson  decibels_100000x100000_1000m_-2.4095_46.4181.geojson  fish.geojson  hurt_zone.geojson  hurt_zone_10_noeuds.geojson  hurt_zone_5_noeuds.geojson  safe_zone.geojson  safe_zone_10_noeuds.geojson  safe_zone_5_noeuds.geojson
data/examples/: DCSMM2018_D11C1.3.geojson  decibels.geojson  safe_zone_noeuds.geojson
data/marine_fauna/: sole_brest_la_rochelle.geojson
deseabel/: .gitignore  Home.css  Home.html  LICENSE  MANIFEST.in  README.md  about.css  about.html  home.css  home.html  map.css  map.html  team.css  team.html
deseabel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deseabel/ocean_ecosystem/: main.py  noise_impactor.py
img/: SoundInOcean.html
img/SoundInOcean_files/: map.js  style.css
ocean_ecosystem/: config.yaml  main.py  marine_fauna.py  marine_map.py  maritime_map.py  matrix_conversion.py  noise_impactor.py  simulator.py  utils.py  vercel.json
ocean_ecosystem/api/: main.py  requirements.txt
visualization/: Carte.css  Carte.html  Home.css  Home.html  about.html  dialog_box.js  donation.html  get_involved.html  home.html  html_from_javascript.js  index.css  index.html  map.html  map.js  mapbox_functions.js  marker.js  matrix_conversion.js  matrix_operations.js  style.css  team.html  zone_of_interest.js
(+45 files in other folders)
