[tool.poetry]
name = "deseabel"
version = "0.1.0"
description = "Repository DeSeabel, simulate and analyse noise pollution in seas and oceans."
authors = ["Florian Toque <florian.toque@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.notebook.dependencies]
jupyterlab = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
