[tool.poetry]
name = "deseabel"
version = "0.1.0"
description = "Repository DeSeabel, simulate and analyse pollution noise in seas and oceans."
authors = ["Florian Toque <florian.toque@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
pandas = "^1.4.4"
geopandas = "^0.12.1"
seaborn = "^0.12.1"


[tool.poetry.group.notebook.dependencies]
jupyterlab = "^3.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88